  instead of "char**". As the client data is typically untyped, you should
  simply remove the casts to "char**" which you probably have in your code if
  you use these functions.
- wxDataViewCtrl::StartEditor(item, n) taking column index is now deprecated,
  use EditItem(item, GetColumn(n)), which takes the column itself, instead.


Major new features in this release
----------------------------------

- wxWidgets is now always built with Unicode support but provides the same
  simple (i.e. "char *"-tolerant) API as was available in ANSI build in the
  past.

- wxWidgets may now use either wchar_t (UTF-16/32) or UTF-8 internally,
  depending on what is optimal for the target platform.

- New propgrid library containing wxPropertyGrid and related classes.

- new ribbon library for advanced toolbars.

- Many enhancements to wxDataViewCtrl.

- Event loops, timers and sockets can now be used in wxBase, without GUI.

- Events can now be connected to any functor, not necessarily a method of
  wxEvtHandler-derived class. The compile-time safety was also improved.

- Documentation for wxWidgets has been converted from LaTex to C++ headers
  with Doxygen comments and significantly improved in the process (screenshots
  of various controls were added, more identifiers are now linked to their
  definition &c). Any reports about inaccuracies in the documentation are
  welcome (and due to using the simple Doxygen syntax it is now easier than
  ever to submit patches correcting them! :-)

- Support for persistent objects automatically saving and restoring their state
  was added.


2.9.4:
------

All:

- Added wxLogFormatter to allow customizing wxLog output (Sébastien Gallou).
- Added "%z" support to wxDateTime::Format() and Parse() (Armel Asselin).
- Add wxHTTP::SetPostBuffer(wxMemoryBuffer) and SetPostText() (Eran Ifrah).
- Fix wrong time zone used in wxDateTime::UNow().
- Fix performance of wxStdInputStream with MSVC8/9 (wsu).
- Added wxFileName::Exists().

All (GUI):
